manifests/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  # 어떤 파드들을 묶을지 결정 (deployment.yaml의 label과 일치해야 함)
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80          # 서비스의 포트 (외부 접속용)
      targetPort: 80  # 파드 내부 컨테이너의 포트 (deployment.yaml 설정값)
  type: ClusterIP      # 인그레스를 사용할 것이므로 내부용 IP만 할당
